--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,8 +4,8 @@ phases:
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
+      - export AWS_ACCOUNT_ID=`aws --no-cli-auto-prompt sts get-caller-identity --query Account --output text`
       - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
-      - aws eks --region $REGION update-kubeconfig --name $CLUSTER
   build:
     commands:
       - echo Build started on `date`
@@ -17,4 +17,3 @@ phases:
       - echo Build completed on `date`
       - echo Pushing the Docker image...
       - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
-      - cat "./k8s/app-deployment.yml" | sed "s/{{APPLICATION_NAME}}/$APPLICATION_NAME/g" | sed "s/{{TENANT_ID}}/$TENANT_ID/g" | sed "s/{{AWS_ACCOUNT_ID}}/$AWS_ACCOUNT_ID/g" | sed "s/{{AWS_DEFAULT_REGION}}/$AWS_DEFAULT_REGION/g" | sed "s/{{IMAGE_REPO_NAME}}/$IMAGE_REPO_NAME/g" | sed "s/{{IMAGE_TAG}}/$IMAGE_TAG/g" | kubectl appluy -f - 
